# arctern

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  arctern-redesign-spec.md  justfile
.github/workflows/: ci.yml  release.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
admin-ui/: .gitignore  index.html  openapi-ts.config.ts  openapi.json  package.json  tsconfig.node.json  vite.config.ts
admin-ui/.vite-hooks/: pre-commit
admin-ui/src/: AdminShell.vue  App.vue  main.ts
admin-ui/src/assets/: main.css
admin-ui/src/client/: index.ts  sdk.gen.ts  types.gen.ts
admin-ui/src/components/: AdminLogin.vue  AppNav.vue  ArcGauge.vue  CreateSnapshotModal.vue  DestroySnapshotModal.vue  EventsLog.vue  IncomingTransfers.vue  JobsGrid.vue  PeerReachabilityBadge.vue  RunsCharts.vue  SnapshotBrowser.vue  TernMark.vue  TransferPanel.vue  TransferSlot.vue  VdevTree.vue
admin-ui/src/composables/: snapshotSources.ts  useArc.ts  useAuth.test.ts  useAuth.ts  useDatasets.ts  useEvents.ts  useHost.ts  useJobRuns.ts  useJobs.test.ts  useJobs.ts  useMutation.ts  usePeers.ts  usePools.ts  useSnapshots.ts
admin-ui/src/router/: index.ts
admin-ui/src/types/: pool.ts
admin-ui/src/utils/: chartTheme.ts  datasets.ts  format.ts  pool.ts  pushTimes.ts  status.ts  vdev.ts
admin-ui/src/views/: ArcView.vue  ConfigView.vue  DashboardView.vue  EventsView.vue  JobDetailView.vue  JobsView.vue  PeerDetailView.vue  PeersView.vue  PlaceholderView.vue  PoolDetailView.vue  PoolsView.vue  SnapshotsView.vue
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: filter.rs  lib.rs  prune.rs  schema.rs  zfs_names.rs
crates/config/src/grid/: mod.rs  retention.rs
crates/config/tests/: example_config.rs
crates/transport/: Cargo.toml
crates/transport/src/: control.rs  identity.rs  lib.rs  protocol.rs  tls.rs
daemon/: Cargo.toml  build.rs
daemon/src/: app_state.rs  auth.rs  configcheck.rs  error.rs  main.rs  router.rs
daemon/src/handlers/: config.rs  datasets.rs  events.rs  jobs.rs  mod.rs  peers.rs  pools.rs  snapshots.rs  system.rs  transfers.rs
daemon/src/jobs/: mod.rs  prune.rs  push.rs  sink.rs  snap.rs
daemon/src/peer/: control.rs  mod.rs  reconnect.rs  state.rs
daemon/src/state/: arcstats.rs  job_runs.rs  log_events.rs  mod.rs  push_syncs.rs  recv_transfers.rs
daemon/src/stdinserver/: control.rs  dispatch.rs  events.rs  mod.rs  recv.rs
daemon/tests/: integration_datasets_endpoint.rs  integration_openssh_forced_command.rs  integration_quic_push.rs  integration_quic_resume.rs  integration_quic_sink.rs  integration_snap_job.rs  integration_snapshots_endpoint.rs  integration_ssh_push.rs
daemon/tests/common/: mod.rs
docs/: admin-ui-plan.md  deploy-full-mirror.md  deploy-snap-only.md  design-process-model.md  example-config.toml  install.md  migrate-from-zrepl.md  roadmap.md
packaging/aur/: README.md
packaging/aur/arctern-bin/: .SRCINFO  .gitignore  PKGBUILD  arctern-bin.install
packaging/systemd/: arctern.service
specs/001-workspace-and-first-endpoint/: plan.md  spec.md  tasks.md
specs/002-unix-socket-and-snapshot-endpoint/: plan.md  spec.md  tasks.md
specs/002-unix-socket-and-snapshot-endpoint/checklists/: requirements.md
specs/003-config-and-snap-job/: plan.md  spec.md  tasks.md
specs/004-quic-sink/: plan.md  spec.md  tasks.md
specs/005-push-job/: plan.md  spec.md  tasks.md
specs/006-resume-tokens/: plan.md  spec.md  tasks.md
src/: main.rs
