[package]
name = "arctern-daemon"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "arctern"
path = "src/main.rs"

[dependencies]
arctern-api = { version = "0.1.0", path = "../crates/api" }
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
eyre = "0.6.12"
palimpsest = { version = "0.1.0", path = "../../palimpsest" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"

[dev-dependencies]
palimpsest = { path = "../../palimpsest" }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }

[features]
# Enables `daemon/tests/integration_*.rs` against a real ZFS-capable host
# reachable via SSH. Requires PALIMPSEST_SSH_TARGET=user@host:port (and
# optionally PALIMPSEST_SSH_PASSWORD); the test boots a loopback pool
# inside the VM and drives the daemon against it.
integration = []
