[package]
name = "arctern-daemon"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "arctern"
path = "src/main.rs"

[dependencies]
arctern-api = { version = "0.1.0", path = "../crates/api" }
arctern-config = { version = "0.1.0", path = "../crates/config" }
arctern-transport = { version = "0.1.0", path = "../crates/transport" }
async-trait = "0.1.89"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
eyre = "0.6.12"
libc = "0.2.186"
palimpsest = { version = "0.1.0", path = "../../palimpsest" }
quinn = "0.11.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"

[dev-dependencies]
arctern-client = { path = "../crates/client" }
palimpsest = { path = "../../palimpsest" }

[features]
# Enables `daemon/tests/integration_*.rs` against a real ZFS-capable host
# reachable via SSH. Requires PALIMPSEST_SSH_TARGET=user@host:port (and
# optionally PALIMPSEST_SSH_PASSWORD); the test boots a loopback pool
# inside the VM and drives the daemon against it.
integration = []
