[package]
name = "arctern-daemon"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "arctern"
path = "src/main.rs"

[dependencies]
arctern-api = { version = "0.1.0", path = "../crates/api" }
arctern-client = { version = "0.1.0", path = "../crates/client" }
arctern-config = { version = "0.1.0", path = "../crates/config" }
arctern-transport = { version = "0.1.0", path = "../crates/transport" }
async-trait = "0.1.89"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
eyre = "0.6.12"
futures-util = "0.3.32"
libc = "0.2.186"
memory-serve = "2.1.0"
openssh = { version = "0.11.6", features = ["native-mux"] }
zfskit = { version = "0.1.0", path = "../../zfskit" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
tarpc = { version = "0.37.0", features = ["serde-transport", "serde-transport-json"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"

[dev-dependencies]
arctern-client = { path = "../crates/client" }
zfskit = { path = "../../zfskit" }
tower = { version = "0.5.3", features = ["util"] }

[features]
# Enables `daemon/tests/integration_*.rs` against a real ZFS-capable host
# reachable via SSH. Requires ZFSKIT_SSH_TARGET=user@host:port (and
# optionally ZFSKIT_SSH_PASSWORD); the test boots a loopback pool
# inside the VM and drives the daemon against it.
integration = []

[build-dependencies]
memory-serve = "2.1.0"
