[package]
name = "arctern-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
arctern-api = { version = "0.1.3", path = "../api" }
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio", "http1", "client-legacy"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["net", "rt"] }
