[package]
name = "arctern-config"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
humantime = "2.3.0"
humantime-serde = "1.1.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "parsing", "macros"] }
toml = "1.1.2"
