[package]
name = "arctern-transport"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
quinn = "0.11.9"
rcgen = "0.14.7"
regex = "1.12.3"
rustls = "0.23.40"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["io-util", "macros"] }
