[package]
name = "arctern-transport"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
bytes = "1.11.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["io-util", "macros"] }
tokio-util = { version = "0.7.18", features = ["codec"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt", "macros"] }
